feat: production hardening — env vars, security, validation, error handling
- Externalize all secrets and config as env vars (DB_URL, DB_USER, DB_PASS, JWT_SECRET, ALLOWED_ORIGINS)
- Change ddl-auto from create-drop to update (no more data loss on restart)
- JwtService: inject secret and expiration from application.yml instead of hardcoded values
- SecurityConfig: CORS origins read from env var, supports multiple origins comma-separated
- SecurityConfig: expose GET /reviews as public endpoint
- ReviewController: add GET /reviews public endpoint (used by frontend home page)
- ReviewService: add @Transactional to create, delete, adminDelete to prevent rating race conditions
- Add spring-boot-starter-validation dependency
- Add @Valid + bean validation to RegisterRequest, LoginRequest, SyncRequest and controllers
- GlobalExceptionHandler: consistent JSON error responses for all exceptions
- Remove TestController (dead code)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>